--- a/PoiemaCommunityBeta/WebContent/css/information.css
+++ b/PoiemaCommunityBeta/WebContent/css/information.css
@@ -31,11 +31,12 @@ option{
 
 .textAreaTd{
     width : 26cm;
+    height : 100%;
 }
 
 textarea{
-    width : 100%;
-    height : 100%;
+    width : 98%;
+    height : 98%;
     resize : none;
     font-size : 20px;
     border : none;
@@ -95,7 +96,7 @@ table{
     border-collapse: collapse;
 }
 
-table,td{
+table,tr,td{
     border : 1px solid black;
 }
 
@@ -227,7 +228,7 @@ form{
 }
 
 input{
-    width : 100%;
+    width : 90%;
     height : 100%;
     font-size : 20px;
     padding-left : 5px;
