--- a/Poiema/src/main/webapp/resources/css/main.css
+++ b/Poiema/src/main/webapp/resources/css/main.css
@@ -2,7 +2,7 @@
 
 body{
     width : 100%;
-    height : 100%;
+    height : 1200px;
     background-color: rgb(231, 235, 238);
 }
 
@@ -12,34 +12,56 @@ body{
     padding-top : 20px;
 }
 
-h1{
-    text-align: center;
+#contentDiv > div:FIRST-CHILD{
+    width : 850px;
+    margin : 0 auto;
+}
+
+h3{
+    text-align: left;
     margin-bottom : 30px;
 }
 
 #totalBar{
-    width : 850px;
-    margin : 0 auto;
-    height : 100px;
-}
-
-#totalBar > div{
-    float : left;
+    width : 200px;
+    height : 100%;
+    margin-left : 20px;
 }
 
 .totalList{
-    width : 150px;
-    margin : 0 auto;
-    margin-right: 20px;
-    height : 100%;
-    background-color: white;
-    border-radius : 8px;
-    text-align: center;
+    width : 100%;
+    height : 80px;
 }
 
-.totalList:HOVER{
-    background-color: rgba(21, 93, 130, 0.3);
+.totalList > div{
+    float : left;
+}
+
+.statusType{
+    width : 60px;
+    height : 60px;
+    background-color: black;
+    border-radius : 4px;
+}
+
+.statusNum{
+    width : 140px;
+    height : 60px;
+    text-align: right;
+    line-height: 60px;
+    font-size: 24px;
+    color : white;
+}
+
+.statusNum:HOVER{
     cursor: pointer;
+}
+
+.headLine{
+    clear : left;
+    width : 100%;
+    height : 2px;
+    margin-top : 3px;
 }
 
 h4{
@@ -56,15 +78,19 @@ h4{
     height : 550px;
     margin : 0 auto;
     margin-top : 30px;
-    background-color : white;
+    background : linear-gradient(-90deg ,rgb(15, 72, 94), rgb(27, 94, 130));
     border-radius : 8px;
     text-align: center;
 }
 
+#graph > div{
+    float : left;
+}
+
 #graphTitle{
     text-align: center;
-    color : rgb(21, 93, 130);
-    font-size: 20px;
+    color : white;
+    font-size: 34px;
     font-weight: bold;
     padding-top : 30px;
     padding-bottom : 30px;
