change html doc 체크 -> # change position 대상자, 봉사자 adjust order by syntax

--- a/Poiema/src/main/webapp/resources/css/listType.css
+++ b/Poiema/src/main/webapp/resources/css/listType.css
@@ -46,6 +46,11 @@ h1,h2{
     overflow: scroll;
 }
 
+.target{
+    font-weight: bold;
+    color: rgb(56,117,215);
+}
+
 .target:HOVER{
     cursor: pointer;
     color : rgb(21, 93, 130);
