--- a/Poiema/src/main/webapp/resources/css/list.css
+++ b/Poiema/src/main/webapp/resources/css/list.css
@@ -50,10 +50,16 @@ form{
 
 table{
     text-align: center;
+    font-size : 14px;
 }
 
 #noData{
     text-align: center;
+}
+
+.target{
+    font-weight : bold;
+    color: rgb(56,117,215);
 }
 
 .target:HOVER {
