--- a/Poiema/src/main/webapp/resources/css/sidebar.css
+++ b/Poiema/src/main/webapp/resources/css/sidebar.css
@@ -41,8 +41,11 @@ body > div{
 }
  
 .sidebar-nav li {
-    text-indent: 1.5em;
     line-height: 2.8em;
+}
+
+.li{
+    text-indent: 1.5em;
 }
  
 .sidebar-nav li a {
@@ -71,12 +74,11 @@ body > div{
     height : 100%;
     color: white;
     font-size: 20px;
-    padding-left: 10px;
-    padding-top: 30px;
+    position : relative;
 }
 
 #slideDown{
-    height : 200px;
+    height : 160px;
     display : none;
 } 
 
@@ -92,4 +94,9 @@ body > div{
 
 a{
     cursor: pointer;
+}
+
+img{
+    width : 100%;
+    height : 100%;
 }
